added readme.md descriptions for running the repo

--- a/OrgRestAPI/Dockerfile
+++ b/OrgRestAPI/Dockerfile
@@ -1,18 +1,19 @@
-FROM debian:stretch-slim
+FROM mysql:5.7
+
+ENV MYSQL_ROOT_PASSWORD=password
+ENV MYSQL_DATABASE=pipedrive
 
 RUN apt-get update -y && apt-get install -y curl && curl -sL https://deb.nodesource.com/setup_8.x | bash - && apt-get install -y nodejs
 
 WORKDIR /usr/src/app
 
 # Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
 COPY package*.json ./
 
 RUN npm install
 
 # Bundle app source
 COPY . .
+COPY ./init.sql /docker-entrypoint-initdb.d/
 
-EXPOSE 8080
-CMD [ "node", "index.js"]
+CMD ["mysqld"]
